--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,67 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;0,600;0,700;1,400&display=swap");
+
+/* .hCBnvI{
+  background-color: #FAFAFA !important;
+} */
+/* #rdt_Table{
+  background-color: #FAFAFA !important;
+  width: 400px;
+} */
+
+/* pagination */
+.page-item {
+  /* float: right;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   width: 40px;
+   border: 1px solid #c2c9d1;
+   height: 40px;*/
+  margin-top: 10px;
+}
+
+.page-link {
+  float: right;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #c2c9d1;
+  width: 40px;
+  height: 40px;
+  /* margin-top: 10px; */
+}
+
+.page-item.active {
+  background-color: #182e7c !important;
+
+  color: white;
+}
+
+.page-item.active .page-link:focus {
+  background-color: #182e7c !important;
+  text-align: center;
+  color: white;
+}
+
+.prev {
+  border-radius: 5px 0px 0px 5px !important;
+}
+
+[role="button"] {
+  /* cursor: none; */
+  cursor: context-menu;
+}
+
+.next {
+  border-radius: 0px 5px 5px 0px !important;
+  background-color: transparent;
+}
+
+.disabled {
+  color: #c2c9d1;
+}
